--- a/client/src/components/Pages/Login/main.css
+++ b/client/src/components/Pages/Login/main.css
@@ -5,7 +5,8 @@
 }
 
 .about {
-    background-color: rgba(245, 245, 245, 0.8)
+    background-color: rgba(245, 245, 245, 0.8);
+    padding-bottom: .5%;
 }
 
 .background {
@@ -33,8 +34,32 @@
 
 .header {
     background-color: rgba(245, 245, 245, 0.8);
+    color: #99ccff;
     padding-bottom: .5%;
     font-family: 'Pacifico', cursive;
     text-shadow: 1px 1px #8dc4fa;
 }
 
+.nav-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.navbar {
+    background-color: rgba(245, 245, 245, 0.8);
+    color: #99ccff;
+    font-family: 'Pacifico', cursive;
+    padding-bottom: .5%;
+    
+    text-shadow: 1px 1px #8dc4fa;
+}
+
+.navbar-nav {
+    color: inherit;
+    text-decoration: none;
+    text-shadow: 1px 1px #8dc4fa;
+}
+
+.collapse {
+    justify-content: flex-end;
+}
