--- a/client/src/components/Pages/Home/home.css
+++ b/client/src/components/Pages/Home/home.css
@@ -1,4 +1,14 @@
 
+.btn {
+    font-family: 'Josefin Slab', serif;
+    font-weight: bold;
+}
+
+.form-group {
+    font-family: 'Josefin Slab', serif;
+    font-weight: bold;
+}
+
 .gen-info-form {
     background-color: rgba(245, 245, 245, 0.8);
     padding-top: .5%;
@@ -16,3 +26,4 @@
     font-family: 'Pacifico', cursive;
     text-shadow: 1px 1px #8dc4fa;
 }
+
