--- a/client/src/components/Pages/Home/home.css
+++ b/client/src/components/Pages/Home/home.css
@@ -19,11 +19,11 @@
     margin: auto;
 }
 
-.header {
+/* .header {
     background-color: rgba(245, 245, 245, 0.8);
     color: #99ccff;
     padding-bottom: .5%;
     font-family: 'Pacifico', cursive;
     text-shadow: 1px 1px #8dc4fa;
-}
+} */
 
