--- a/client/src/components/Pages/Login/login.css
+++ b/client/src/components/Pages/Login/login.css
@@ -1,4 +1,65 @@
+.about {
+    background-color: rgba(245, 245, 245, 0.8);
+    padding-bottom: .5%;
+}
 
-.button-wrapper .btn {
+.label {
+    color:#99ccff;
+    font-family: 'Pacifico', cursive;
+    text-shadow: 1px 1px #8dc4fa;
+}
+
+.background {
+    height:100%;
+    background-image: url('../../../images/mainBackground.jpeg');
+    background-size: cover;
+}
+
+.btn {
+    margin: 5px;
+    background-color: #99ccff;
+    border-color: #99ccff;
+    color: black;
+}
+
+/* .button-wrapper .btn {
     margin-top: 5px;
+} */
+
+.card-text {
+    font-family: 'Josefin Slab', serif;
+}
+
+.card-title {
+    font-family: 'Josefin Slab', serif;
+    font-weight: bold;
+}
+
+.description {
+    font-family: 'Josefin Slab', serif;
+    color: black;
+}
+
+/* .nav-link {
+    color: inherit;
+    text-decoration: none;
+} */
+
+/* .navbar {
+    background-color: rgba(245, 245, 245, 0.8);
+    color: #99ccff;
+    font-family: 'Pacifico', cursive;
+    padding-bottom: .5%;
+    
+    text-shadow: 1px 1px #8dc4fa;
+} */
+
+.navbar-nav {
+    color: inherit;
+    text-decoration: none;
+    text-shadow: 1px 1px #8dc4fa;
+}
+
+.collapse {
+    justify-content: flex-end;
 }
