basic styling updates

--- a/client/src/components/Pages/Home/home.css
+++ b/client/src/components/Pages/Home/home.css
@@ -1,4 +1,10 @@
 
+.background {
+    position: absolute;
+    padding-bottom: 900px;
+    min-height: 100vh;
+}
+
 .btn {
     font-family: 'Josefin Slab', serif;
     font-weight: bold;
