--- a/client/src/components/Pages/Login/login.css
+++ b/client/src/components/Pages/Login/login.css
@@ -1,3 +1,5 @@
+
+
 .about {
     background-color: rgba(245, 245, 245, 0.8);
     padding-bottom: .5%;
@@ -13,6 +15,10 @@
     height:100%;
     background-image: url('../../../images/mainBackground.jpeg');
     background-size: cover;
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+
 }
 
 .btn {
@@ -58,6 +64,18 @@
     color: inherit;
     text-decoration: none;
     text-shadow: 1px 1px #8dc4fa;
+}
+
+.tutor-login {
+
+    background-color: rgba(245, 245, 245, 0.8);
+    padding-top: .5%;
+    padding-bottom: .5%;
+    padding-left: 2%;
+    padding-right: 2%;
+    width: 50%;
+    margin: auto;
+    
 }
 
 .collapse {
